Fixed bug where too short screen cause log-in background to end above button

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -522,11 +522,9 @@ p, label {
 .login-div {
   position: absolute;
   top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  height: 100%;
+  min-height: 100%;
+  height: contain;
+  padding-bottom: 1em;
   width: 100%;
   background-color: var(--pink-color);
   display: flex;
